--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = "4.0.26"
 console = "0.15.3"
 glob = "0.3.0"
 rand = "0.8.5"
-code-lines = "0.1.3"
+code-lines = { git = "https://github.com/NilVentosa/code-lines" }
